<resources>
    <string name="app_name">ComicsLife</string>
    <string name="title_home">Статьи</string>
    <string name="title_dashboard">Объявления</string>
    <string name="title_notifications">Профиль</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_email">Почта</string>
    <string name="button_login_text">Войти</string>
    <string name="button_registration_text">Зарегистрироваться</string>
    <string name="login_text">Логин</string>
    <string name="accept_password_text">Подтверждение пароля</string>
    <string name="user_have_account">Вы уже зарегистрированы?\nАвторизоваться</string>
    <string name="user_dont_have_account">У вас не таккаунта?\nЗарегистрироваться</string>
    <string name="title_of_create_article">Конструктор статей</string>
    <string name="name_of_article">Название статьи</string>
    <string name="add_title">Заголовок</string>
    <string name="add_tag_b">Жирный</string>
    <string name="add_tag_u">Подчернуть</string>
    <string name="add_tag_bloackquite">Цитата</string>
    <string name="add_tag_img">Изображение</string>
    <string name="add_tag_ref">Абзац</string>
    <string name="add_tag_ul">Маркированый список</string>
    <string name="add_tag_ol">Нумерованый список</string>
    <string name="Clear_text">Очистить</string>
    <string name="create_article">Создать</string>
    <string name="new_line">Переход на новую строку</string>
    <string name="text_ad">Создание объявления</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="price">Цена</string>
    <string name="create_ad">Создать объявление</string>
    <string name="marvel">Комиксы Marvel</string>
    <string name="good_state">В хорошем состоянии…</string>
    <string name="phone">Номер телефона</string>
    <string name="phone_number">89046785423</string>
    <string name="price_example">599</string>
    <string name="call">Позвонить</string>
    <string name="address">Адрес</string>
    <string name="example_address">г. Архангельск, ул. Папанина, д.1, кв. 54</string>
    <string name="profile">Профиль</string>
    <string name="login">Логин</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="save">Сохранить</string>
    <string name="open_full">Открыть полностью</string>
    <string name="article">Статьи</string>
    <string name="ad">Объявления</string>
</resources>
